--- a/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
@@ -1,13 +1,7 @@
-﻿<!-- ProjectoEsw.Models.Identity.Perfil -->
-@inject ProjectoEsw.GestorAplicacao.GestorAjudas gestorAjudas
+﻿@inject ProjectoEsw.GestorAplicacao.GestorAjudas gestorAjudas
 @model ProjectoEsw.Models.Identity.RegisterViewModel
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 
-@section links {
-    <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(model => model.Email) </a>
-    <a asp-area="" asp-controller="Candidato" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
-    <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
-}
 
 <div class="jumbotron col-sm-7 col-sm-offset-1">
     <div class="container col-lg-offset-1 col-sm-10">
