--- a/ProjectoEsw/Views/Candidato/Perfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/Perfil.cshtml
@@ -1,13 +1,112 @@
 ﻿@model ProjectoEsw.Models.Identity.Perfil;
-@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+
 
 @section links {
-    <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(model => model.Email) </a>
     <a asp-area="" asp-controller="Candidato" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
-    <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
+    <a asp-area="" asp-controller="Candidato" asp-action="perfil" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(model => model.Email) </a>
 }
-
-
-
-<h2>Perfil</h2>
-
+<div class="jumbotron col-sm-8">
+    <h2 class=" text-center">Perfil do Candidato</h2>
+    <div class="col-sm-12">
+        <label asp-for="NomeCompleto" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.NomeCompleto == null)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5>@Model.NomeCompleto</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="DataNasc" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.DataNasc == null)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5>@Model.DataNasc</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="Morada" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.Morada == null)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5> @Model.Morada</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="Email" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.Email == null)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5>@Model.Email</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="Nif" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.Nif == 0)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5>@Model.Nif</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="NumeroIdentificacao" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.NumeroIdentificacao == 0)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5>@Model.NumeroIdentificacao</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="Telefone" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.Telefone == null)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5>@Model.Telefone</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="Foto" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            <p>@Model.Foto</p>
+        </div>
+    </div>
+</div>
+<div class="jumbotron col-sm-3 col-sm-offset-1">
+    <h5 class="text-center">Opcoes</h5>
+    <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
+    <a asp-area="" asp-controller="Candidato" asp-action="EditarPerfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>
+</div>
