--- a/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
@@ -1,5 +1,4 @@
 ﻿@inject ProjectoEsw.GestorAplicacao.GestorAjudas gestorAjudas
-@inject ProjectoEsw.GestorAplicacao.Gestor gestor
 @model ProjectoEsw.Models.Identity.RegisterViewModel
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -9,28 +8,30 @@
 }
 
 <div class="jumbotron col-sm-7 col-sm-offset-1">
+    <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaPagina("Home.EditarPerfil").Descricao"></span>
+
     <div class="container col-lg-offset-1 col-sm-10">
         <h2 class="text-center">Editar Perfil</h2>
         <form class="form-horizontal" asp-controller="Candidato" asp-action="EditarPerfil" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
-                <input asp-for="Nif" placeholder="Nova NIF" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <input asp-for="Nif" placeholder="Nova NIF" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Novo NIF").Descricao" />
                 <span asp-validation-for="Nif" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="NumeroIdentificacao" placeholder="Novo Numero de Identificação" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <input asp-for="NumeroIdentificacao" placeholder="Novo Numero de Identificação" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Novo Numero Identificação").Descricao" />
                 <span asp-validation-for="NumeroIdentificacao" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="MoradaRua" placeholder="Nova Rua" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <input asp-for="MoradaRua" placeholder="Nova Rua" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada Rua").Descricao" />
                 <span asp-validation-for="MoradaRua" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="MoradaCodigoPostal" placeholder="Novo Codigo Postal" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <input asp-for="MoradaCodigoPostal" placeholder="Novo Codigo Postal" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada Codigo Postal").Descricao" />
                 <span asp-validation-for="MoradaCodigoPostal" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="MoradaConcelho" placeholder="Novo Concelho" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <input asp-for="MoradaConcelho" placeholder="Novo Concelho" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada Concelho").Descricao" />
                 <span asp-validation-for="MoradaConcelho" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="MoradaDistrito" placeholder="Novo Distrito" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <input asp-for="MoradaDistrito" placeholder="Novo Distrito" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada Distrito").Descricao" />
                 <span asp-validation-for="MoradaDistrito" class="text-danger"></span>
                 <div class=" help-block"></div>
                 <input asp-for="Telefone" placeholder="Novo Telefone" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Novo Telefone").Descricao" />
