--- a/ProjectoEsw/Views/Candidato/Index.cshtml
+++ b/ProjectoEsw/Views/Candidato/Index.cshtml
@@ -5,7 +5,7 @@
     <a asp-area="" asp-controller="Candidato" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
     <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(model => model.Email) </a>
     }
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="9000" >
+<div id="myCarousel" class="carousel slide col-sm-8" data-ride="carousel" data-interval="9000" >
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -34,11 +34,15 @@
     </a>
 </div>
 
-
+<div class="jumbotron col-sm-3 col-sm-offset-1">
+    <h5 class="text-center">Opcoes</h5>
+    <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
+    <a asp-area="" asp-controller="Candidato" asp-action="EditarPerfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>
+</div>
 @section calendario {
 
 <script> CriarCalendario("Candidato")</script>
-<div class="col-lg-offset-10 col-sm-2">
+<div class="col-sm-offset-1 col-sm-3">
     <div id="calendar"></div>
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
