--- a/ProjectoEsw/Views/Home/Login.cshtml
+++ b/ProjectoEsw/Views/Home/Login.cshtml
@@ -8,6 +8,7 @@
 }
 
 <div class="jumbotron col-sm-10 col-sm-offset-1">
+    <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content= "@gestorAjudas.BuscarAjudaPagina("Home.Login").Descricao"></span>
     <div class="container col-lg-offset-2 col-sm-8">
         <h2 class="text-center">Login</h2>
         <form class="form-horizontal" asp-controller="Home" asp-action="Login" method="post">
