--- a/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
+++ b/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
@@ -12,6 +12,8 @@
 
 
 <div class="jumbotron col-sm-10 col-sm-offset-1">
+    <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaPagina("Home.RecuperarPassword").Descricao"></span>
+
     <div class="container col-lg-offset-2 col-sm-8">
         <h2 class="text-center">@ViewData["Title"]</h2>
         <form class="form-horizontal" asp-controller="Home" asp-action="RecuperarPassword" method="post">
