--- a/ProjectoEsw/Views/Candidato/Index.cshtml
+++ b/ProjectoEsw/Views/Candidato/Index.cshtml
@@ -77,7 +77,13 @@
                     <h4 class="modal-title"><span id="eventoTitulo"></span></h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form-horizontal" asp-controller="Candidato" asp-action="SaveEvents" method="post">
+                    @using (Html.BeginForm("SaveEvents", "Candidato", FormMethod.Post))
+                    {
+                        @Html.Label("Titulo");
+                        @Html.TextBox("Titulo")
+                        <input type="submit" value="Sign In">
+                    }
+                    @*<form class="form-horizontal" action="/Candidato/SaveEvents" method="post">
                         <input type="hidden" id ="id" value="0"/>
                         <div class="form-group">
                             <label>Titulo</label>
@@ -105,7 +111,7 @@
                             </div>
                         </div>
 
-                    </form>
+                    </form>*@
 
                 </div>
                 <div class="modal-footer">
