--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -11,11 +11,12 @@
     <link href="~/css/site.css" rel="stylesheet"/>
     <link href="~/lib/bootstrap-datepicker/dist/css/bootstrap-datepicker.css" rel="stylesheet" />
 
-
+    
     <script src="~/lib/moment/moment.js"></script>       
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/lib/fullcalendar/dist/fullcalendar.js"></script>
+    <script src="~/lib/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
     <script src="~/js/site.js"></script>
     <script>
         $(document).ready(function () {
