--- a/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
@@ -1,6 +1,7 @@
 ﻿@inject ProjectoEsw.GestorAplicacao.GestorAjudas gestorAjudas
 @model ProjectoEsw.Models.Identity.RegisterViewModel
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+@using ProjectoEsw.Models.Identity;
 
 @section links {
     <a asp-area="" asp-controller="Candidato" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
@@ -31,10 +32,14 @@
                 <input asp-for="MoradaCodigoPostal" placeholder="Novo Codigo Postal" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada Codigo Postal").Descricao" />
                 <span asp-validation-for="MoradaCodigoPostal" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="MoradaConcelho" placeholder="Novo Concelho" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada Concelho").Descricao" />
+                <select asp-for="MoradaConcelho" asp-items="Html.GetEnumSelectList<Concelho>()" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada Concelho").Descricao">
+                    <option selected="selected" value="0">Escolha o Concelho</option>
+                </select>
                 <span asp-validation-for="MoradaConcelho" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="MoradaDistrito" placeholder="Novo Distrito" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada Distrito").Descricao" />
+                <select asp-for="MoradaDistrito" asp-items="Html.GetEnumSelectList<Distrito>()" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada Distrito").Descricao">
+                    <option selected="selected" value="0">Escolha o Distrito</option>
+                </select>
                 <span asp-validation-for="MoradaDistrito" class="text-danger"></span>
                 <div class=" help-block"></div>
                 <input asp-for="Telefone" placeholder="Novo Telefone" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Novo Telefone").Descricao" />
