--- a/ProjectoEsw/Views/Home/ResetPassword.cshtml
+++ b/ProjectoEsw/Views/Home/ResetPassword.cshtml
@@ -22,10 +22,10 @@
                 <input asp-for="Email" placeholder="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Password" placeholder="password" class="form-control" />
+                <input asp-for="Password" placeholder="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="ConfirmPassword" placeholder="confirm password" class="form-control" />
+                <input asp-for="ConfirmPassword" placeholder="Confirm Password" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 <div class=" help-block"></div>
                 <input name="Code" type="hidden" value="@ViewBag.code"/>
