--- a/ProjectoEsw/Views/Home/ConfirmarPassword.cshtml
+++ b/ProjectoEsw/Views/Home/ConfirmarPassword.cshtml
@@ -8,6 +8,9 @@
     <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
 }
+@section Home {
+    <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+}
 <div class="jumbotron">
     <h2 class=" text-center"><strong>Reset Password</strong></h2>
     <p><strong>Verifique a sua caixa de correio para efectuar o reset de password. </strong></p>
