--- a/ProjectoEsw/Views/Shared/Calendario.cshtml
+++ b/ProjectoEsw/Views/Shared/Calendario.cshtml
@@ -13,6 +13,9 @@
                 <h4 class="modal-title"><span id="eventoTitulo"></span></h4>
             </div>
             <div class="modal-body">
+                <label>Inicio:</label> <p id="inicioEvento"></p>
+                <label>Fim</label> <p id="fimEvento"></p>
+                <label>Descrição</label> <p id="descricaoEvento"></p>
                 <button id="btnDelete" class="btn btn-default btn-sm pull-right">
                     <span class="glyphicon glyphicon-remove"> Remover </span>
                 </button>
