--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -28,10 +28,12 @@
 <body>
     <div class="container">
         <div class="row">
-            <div>
+            @*dei lhe um col offset e col sm*@
+            <div class="col-sm-offset-8 col-sm-4">
                 @RenderSection("links", required: true)                
             </div>
-            <div class="col-sm-2">
+            @*sm to xs*@
+            <div class="col-xs-2">
                 <div class="sidebar-nav">
                     <img src="~/images/LogoIpsFinal.png" />
                     <div class="help-block"></div>
